core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin4.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoin
      list: ["A", "B"]
      mapTarget: X
      putElement: "eleent"
      keys: {}

  X:
    - type: StringContains
      regex: ""
      content: "{element}"


